Add performance related explanatory comment. 	* config/ia64/ia64.md (insv): Add comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33836 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 10 21:31:44 2000  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.md (insv): Add comment.
+
 2000-05-10  Richard Henderson  <rth@cygnus.com>
 
 	* Makefile.in (libgcc.a, stmp-multilib): Depend on FPBIT and DPBIT.
