--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-10 Laurynas Biveinis <lauras@softhome.net>
+
+	* i386/xm-djgpp.h (XREF_FILE_NAME): Add mising brace.
+
 2000-05-10  Kazu Hirata  <kazu@hxi.com>
 
 	* combine.c (try_combine): Fix a typo.
@@ -9239,6 +9243,7 @@ Wed Feb 16 21:40:04 2000  Hans-Peter Nilsson  <hp@bitrange.com>
 	* longlong.h (__clz_tab): Declare as static to match definition.
 
 2000-02-16 Mark Elbrecht <snowball3@bigfoot.com>
+
 	* i386/xm-djgpp.h (LIBSTDCXX): Delete. Moved to config/i386/djgpp.h.
 	(XREF_FILE_NAME): Define.
 
