* cpphash.c (collect_funlike_expansion): Make "# is not 	followed by a macro argument name" a pedwarn, not an error. 	Preserve the # in the output.  Suppress the warning if lang_asm.
	* gcc.dg/dg.exp: Scan .S files as well as .c files.
	* gcc.dg/20000510-1.S: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33841 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-11  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpphash.c (collect_funlike_expansion): Make "# is not
+	followed by a macro argument name" a pedwarn, not an error.
+	Preserve the # in the output.  Suppress the warning if lang_asm.
+
 Thu May 11 01:19:31 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* configure.in (hppa*64*-*-hpux11*): New target for PA64 support.
