--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-11  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/dg.exp: Scan .S files as well as .c files.
+	* gcc.dg/20000510-1.S: New.
+
 2000-05-08  Catherine Moore  <clm@cygnus.com>
 
 	* gcc.dg/unused-3.c: New.
