--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2000-05-11  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/fixfixes.c(double_slash_fix):  obsolete
+	(else_endif_label_fix): obsolete
+	(format_fix):  new, unused as yet
+	(main): obsolete
+	* fixinc/fixlib.h: added fix description struct for use by format_fix
+	* fixinc/fixincl.c: removed the struct & test for SIGIOT befure using
+	* fixinc/Makefile.in:  compile fixfixes.c and fixtests.c as separate
+	modules.  Removed the vestiges of the script version.
+	Added support for "make check".
+	* fixinc/check.tpl: quiet the fixup output
+	* fixinc/fixtests.c(main): obsolete
+	* fixinc/fixincl.sh:  don't bother copying fixincl to ..
+	* fixinc/fixincl.tpl:  provide for arguments to c_fix routines
+
 Thu May 11 11:57:02 MET DST 2000  Jan Hubicka <jh@suse.cz>
 
 	* toplev.c (rest_of_compilation): Remove dead code after
