* regrename.c (replace_reg_in_block): Improve REG_DEAD handling. 	* timevar.def (TV_RENAME_REGISTERS): Move before TV_SCHED2. 	* toplev.c (rest_of_compilation): Call regrename_optimize before sched2.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33845 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-11 Stan Cox <scox@cygnus.com>
+
+	* regrename.c (replace_reg_in_block): Improve REG_DEAD handling.
+	* timevar.def (TV_RENAME_REGISTERS): Move before TV_SCHED2.
+	* toplev.c (rest_of_compilation): Call regrename_optimize before sched2.
+
 2000-05-11  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/fixfixes.c(double_slash_fix):  obsolete
