--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-11  Tom Tromey  <tromey@cygnus.com>
+
+	* java/util/zip/ZipInputStream.java (getNextEntry): When reading
+	file headers, don't include `size' in the skip call.
+
 2000-05-10  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* java/lang/StringBuffer.java (delete): Call arrayCopy() correctly.
