2000-05-11  Scott Bambrough  <scottb@netwinder.org>
	* libffi/src/arm/sysv.S (ffi_call_SYSV): Doubles are not saved to
	memory correctly.  Use conditional instructions, not branches where
	possible.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33852 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-11  Scott Bambrough  <scottb@netwinder.org>
+
+	* libffi/src/arm/sysv.S (ffi_call_SYSV): Doubles are not saved to 
+	memory correctly.  Use conditional instructions, not branches where 
+	possible.
+
 2000-05-04  Tom Tromey  <tromey@cygnus.com>
 
 	* configure: Rebuilt.
