--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-11  Mark Elbrecht  <snowball3@bigfoot.com>
+
+	* cppmain.c (main): Use IS_DIR_SEPARATOR.
+
 2000-05-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* except.c (find_exception_handler_labels_1): New function.
