--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Thu May 11 22:28:05 2000  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr-protos.c (jump_over_one_insn_p): New declaration.
+	* config/avr/avr.c (jump_over_one_insn_p): New function.
+	* config/avr/avr.md: New peepholes added. Output test and
+	conditional jump to "sbrc" or "sbrs" command.
+
 2000-05-11  Mark Elbrecht  <snowball3@bigfoot.com>
 
 	* cppmain.c (main): Use IS_DIR_SEPARATOR.
