* class.c (check_field_decls): Complain about non-static data         members with same name as class in class with constructor.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33856 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-11  Jason Merrill  <jason@casey.cygnus.com>
+
+	* class.c (check_field_decls): Complain about non-static data
+	members with same name as class in class with constructor.
+
 2000-05-10  Jason Merrill  <jason@casey.cygnus.com>
 
 	* decl.c (grokdeclarator): Allow non-static data members with
