2000-05-11  Robert Lipe <robertlipe@usa.net>
        * configure.in: Remove special casing for sco3.2v[45].
        * config/sco4.mt: Deleted.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33864 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libio/ChangeLog
+++ b/libio/ChangeLog
@@ -1,3 +1,9 @@
+
+2000-05-11  Robert Lipe <robertlipe@usa.net>
+
+	* configure.in: Remove special casing for sco3.2v[45].
+	* config/sco4.mt: Deleted.
+
 2000-05-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.in: Use mh-sparcpic for sparc*-*-*.
