* g77.f-torture/compile/20000511-1.f: New test.         * g77.f-torture/compile/20000511-2.f: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33866 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 11 19:02:43 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* g77.f-torture/compile/20000511-1.f: New test.
+	* g77.f-torture/compile/20000511-2.f: New test.
+
 2000-05-11  Michael Meissner  <meissner@redhat.com>
 
 	* gcc.c-torture/execute/20000511-1.c: New test.
