* calls.c: Revert both 05-09 patches.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-11  Richard Henderson  <rth@cygnus.com>
+
+	* calls.c: Revert both 05-09 patches.
+
 2000-05-11  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* config/mn10300/mn10300.c (print_operand): Print FP constants in
