* tinfo.cc: Revert my 2000-05-08 and 2000-05-07 changes. 	* vec.cc: Revert my 2000-05-07 change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33875 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-12  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* tinfo.cc: Revert my 2000-05-08 and 2000-05-07 changes.
+	* vec.cc: Revert my 2000-05-07 change.
+
 2000-05-11  Jason Merrill  <jason@casey.cygnus.com>
 
 	* class.c (check_field_decls): Complain about non-static data
