* gcc.c-torture/execute/990208-1.c (main): Don't pass         constants through to doit's conditional.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33878 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-12  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.c-torture/execute/990208-1.c (main): Don't pass
+	constants through to doit's conditional.
+
 Thu May 11 19:02:43 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/compile/20000511-1.c: New test.
