* ggc-simple.c (offsetof): Macro definition moved from here ... 	* system.h (offsetof): ... to here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33879 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 12 19:03:58 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* ggc-simple.c (offsetof): Macro fallback definition moved from here ..
+	* system.h (offsetof): ... to here.
+
 2000-05-12  Richard Henderson  <rth@cygnus.com>
 
 	* Makefile.in (final.o): Depend on BASIC_BLOCK_H.
