--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 12 11:23:17 2000  Jeffrey A Law  (law@cygnus.com)
+
+        * config.sub (basic_machine): Recognize hppa64 as a valid cpu type.
+
 Sat May  6 21:12:55 CDT 2000  Jason Eckhardt  <jle@cygnus.com>
 
 	* MAINTAINERS: Add self as bb-reorder maintainer.
