* config/alpha/alpha.c (struct shadow_summary): Define         bitfields as type unsigned int.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33884 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-12  Richard Henderson  <rth@cygnus.com>
+
+	* config/alpha/alpha.c (struct shadow_summary): Define
+	bitfields as type unsigned int.
+
 Sat May 13 00:09:59 2000  Denis Chertykov  <denisc@overta.ru>
 
 	* config/avr/t-avr: Added definition of FLOAT while generates
