--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat May 13 11:05:47 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* ifcvt.c (if_convert): Do not free NULL.
+
 2000-05-12  Nick Clifton  <nickc@cygnus.com>
 
 	* config/fr30/fr30.c (fr30_move_double): New function:  Emit code
