2000-05-13  Gabriel Dos Reis <gdr@codesourcery.com>
        * diagnostic.h (DIAGNOSTICS_SHOW_PREFIX_ONCE): New macro.
        (DIAGNOSTICS_SHOW_PREFIX_NEVER): Likewise.
        (DIAGNOSTICS_SHOW_PREFIX_EVERY_LINE): Likewise.
        (struct output_buffer: emitted_prefix_p, prefixing_rule): New
        fields.
        (set_message_prefixing_rule): Declare.

        * diagnostic.c: (current_prefixing_rule): New variable.
        (set_message_prefixing_rule): Define.
        (output_set_prefix): Adjust buffer->emitted_prefix_p.
        (init_output_buffer): Adjust Initialization.
        (output_emit_prefix): Rewrite.  Take prefixing rules into account.

cp/

2000-05-13  Gabriel Dos Reis <gdr@codesourcery.com>

        * lex.c: #include diagnostic.h.
        (lang_init_options): Set default prefixing rules.

        * lang-options.h: Add -fdiagnostics-show-location=.

        * decl2.c: #include diagnostic.h.
        (lang_decode_option): Handle -fdiagnostics-show-location=.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33890 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2000-05-13  Gabriel Dos Reis <gdr@codesourcery.com>
+
+	* diagnostic.h (DIAGNOSTICS_SHOW_PREFIX_ONCE): New macro.
+	(DIAGNOSTICS_SHOW_PREFIX_NEVER): Likewise.
+	(DIAGNOSTICS_SHOW_PREFIX_EVERY_LINE): Likewise.
+	(struct output_buffer: emitted_prefix_p, prefixing_rule): New
+	fields. 
+	(set_message_prefixing_rule): Declare.
+
+	* diagnostic.c: (current_prefixing_rule): New variable.
+	(set_message_prefixing_rule): Define.
+	(output_set_prefix): Adjust buffer->emitted_prefix_p.
+	(init_output_buffer): Adjust Initialization.
+	(output_emit_prefix): Rewrite.  Take prefixing rules into account.
+	
 Sat May 13 11:05:47 2000  Philippe De Muyter  <phdm@macqel.be>
 
 	* ifcvt.c (if_convert): Do not free NULL.
