--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun May 14 17:58:59 2000  Hans-Peter Nilsson  <hp@axis.com>
+
+	* mklibgcc.in (building libgcc1) [Xlibgcc1.a]: Do not use unset
+	variables $src and $dst.
+	
 2000-05-13  Gabriel Dos Reis <gdr@codesourcery.com>
 
 	* diagnostic.h (DIAGNOSTICS_SHOW_PREFIX_ONCE): New macro.
