--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-13  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* invoke.texi (RS/6000 and PowerPC Options): Update -m64/-m32
+	flags to their current names -maix64 and -maix32.
+
 2000-05-14  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/fixfixes.c(wrap_fix): new fix - inserts text before
