* optabs.c (expand_float): Don't allow mode widening that causes double rounding.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33894 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,7 @@
-2000-05-13  Geoffrey Keating  <geoffk@cygnus.com>
+2000-05-14  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* optabs.c (expand_float): Don't allow mode widening that causes
+	double rounding.
 
 	* invoke.texi (RS/6000 and PowerPC Options): Update -m64/-m32
 	flags to their current names -maix64 and -maix32.
