2000-05-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
	* rs6000/rs6000.md (nonlocal_goto_receiver): Add length attribute.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@33896 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-2_95-branch/gcc/ChangeLog
+++ b/gcc-2_95-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* rs6000/rs6000.md (nonlocal_goto_receiver): Add length attribute.
+
 Wed Apr 12 00:42:19 2000  Jeffrey A Law  (law@cygnus.com)
 
 	2000-02-19  Richard Henderson  <rth@cygnus.com>
