--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 15 13:39:09 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* MAINTAINERS: Add self to Write After Approval list.
+
 Fri May 12 11:23:17 2000  Jeffrey A Law  (law@cygnus.com)
 
         * config.sub (basic_machine): Recognize hppa64 as a valid cpu type.
