* calls.c (expand_call): Move expand_start_target_temps call after 	start_sequence().
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33911 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* calls.c (expand_call): Move expand_start_target_temps call after
+	start_sequence().
+
 2000-05-15  Neil Booth  <NeilB@earthling.net>
 
 	* cpphash.c (trad_stringify, warn_trad_stringify,
