Makefile.in: Change "pic" to depend on $(PICFLAG), not         on $(enable_shared).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33918 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-15  David Edelsohn  <edelsohn@gnu.org>
+
+	Makefile.in: Change "pic" to depend on $(PICFLAG), not
+	on $(enable_shared).
+
 2000-05-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* config.table: Use mh-sparcpic for sparc*-*-*.
