--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,6 +1,6 @@
 2000-05-15  David Edelsohn  <edelsohn@gnu.org>
 
-	Makefile.in: Change "pic" to depend on $(PICFLAG), not
+	* Makefile.in: Change "pic" to depend on $(PICFLAG), not
 	on $(enable_shared).
 
 2000-05-10  Jakub Jelinek  <jakub@redhat.com>
