* config.shared: Change "pic" to depend on $(PICFLAG), not         on $(enable_shared).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33920 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libio/ChangeLog
+++ b/libio/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-15  David Edelsohn  <edelsohn@gnu.org>
+
+	* config.shared: Change "pic" to depend on $(PICFLAG), not
+	on $(enable_shared).
 
 2000-05-11  Robert Lipe <robertlipe@usa.net>
 
