* ifcvt.c (cond_exec_process_insns): Drop USE and CLOBBER insns         that get in the way after reload.         (cond_exec_process_if_block): Skip a label heading THEN block.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33923 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2000-05-15  Richard Henderson  <rth@cygnus.com>
 
+	* ifcvt.c (cond_exec_process_insns): Drop USE and CLOBBER insns
+	that get in the way after reload.
+	(cond_exec_process_if_block): Skip a label heading THEN block.
+
+2000-05-15  Richard Henderson  <rth@cygnus.com>
+
 	* varasm.c (output_constant_pool): Abort instead of converting
 	(improperly) deleted labels to zero.
 
