--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-15  Andrew Haley  <aph@cygnus.com>
+
+	* include/ppc-signal.h: New file.
+
 2000-05-11  Tom Tromey  <tromey@cygnus.com>
 
 	* java/util/zip/ZipInputStream.java (getNextEntry): When reading
