* libjava.lang/instance.out: New file. 	* libjava.lang/instance.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33941 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-16  Tom Tromey  <tromey@cygnus.com>
+
+	* libjava.lang/instance.out: New file.
+	* libjava.lang/instance.java: New file.
+
 2000-05-10  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* libjava.lang/StringBuffer_1.java: New file.
