--- a/gcc-2_95-branch/gcc/ChangeLog
+++ b/gcc-2_95-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-16  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+ 
+	* sysv4.h (CPP_OS_LINUX_SPEC): Define __unix and __linux according
+	to given options.
+
 2000-05-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* rs6000/rs6000.md (nonlocal_goto_receiver): Add length attribute.
