--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,20 @@
+2000-05-16  Mark Mitchell  <mark@codesourcery.com>
+
+	* class.c (copy_virtuals): New function.
+	(build_primary_table): Use it.
+	(build_secondary_vtable): Likewise.
+	(modify_vtable_entry): Use NULL_TREE, not integer_zero_node, to
+	indicate that no vcall offset is required.
+	(add_virtual_function): Likewise.
+	(modify_all_vtables): Likewise.
+	(dfs_finish_vtbls): Adjust call to build_vtbl_initializer.
+	(dfs_accumulate_vtbl_inits): Likewise.
+	(build_vtbl_initializer): Make changes to handle construction
+	vtables.
+	(dfs_build_vcall_offset_vtbl_entries): Likewise.
+	(build_rtti_vtbl_entries): Likewise.
+	(build_vtable_entries): Handle a NULL vcall_index.
+
 2000-05-15  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* decl2.c (lang_decode_option): Fix thinko.
