--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-16  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
+	* rs6000/rs6000.c (rs6000_select_section): Treat CONSTRUCTOR like
+	VAR_DECL.
+
 	* rs6000/sysv4.h (ASM_OUTPUT_DWARF_ADDR): Delete unused variable.
 
 	* rs6000/sysv4.h (CPP_OS_LINUX_SPEC): Define __unix and __linux
